argo/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argo-gateway
  namespace: argo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo
  namespace: argo
spec:
  hosts:
    - argo.server
  gateways:
    - argo-gateway
  http:
    - route:
        - destination:
            host: argo-server.argo.svc.cluster.local
            port:
              number: 2746
